fix: make mobile navbar overlay visible

--- a/utils/styles/navbar.scss
+++ b/utils/styles/navbar.scss
@@ -45,7 +45,7 @@
 	}
 
 	@at-root #mobile-navbar__checkbox:not(:checked) ~ .mobile-navbar__overlay {
-		display: none;
+		pointer-events: none;
 	}
 
 	@at-root #mobile-navbar__checkbox:checked ~ .mobile-navbar__overlay {
@@ -54,11 +54,11 @@
 	}
 
 	position: fixed;
-	height: calc(100vh - 40px);
+	top: 0;
+	height: 100vh;
 	width: 100vw;
-	top: 40px;
 	z-index: 999;
-	color: black;
+	background-color: black;
 	opacity: 0;
 	transition: opacity 0.4s ease-out;
 }
@@ -68,6 +68,7 @@
 	background-color: rgb(79, 17, 179);
 	border-style: solid;
 	border-color: white;
+	z-index: 1000;
 
 	@include media-breakpoint-down(lg) {
 
@@ -81,9 +82,8 @@
 
 		display: flex;
 		flex-direction: column;
-		top: 40px;
 		position: fixed;
-		height: calc(100vh - 40px);
+		height: 100vh;
 		width: 200px;
 		border-width: 0 2px 0 0;
 		transition: transform 0.4s ease-out;
